initial hairsalon css and js upload

--- a/SALON/index.html
+++ b/SALON/index.html
@@ -10,17 +10,52 @@
 </head>
 <body>
 
-   <nav>
-       <ul>
-<li><a href="#home">Home</a></li>
-<li><a href="#about">About</a></li>
-<li><a href="#services">Services</a></li>
-<li><a href="gallery.html">Gallery</a></li>
-<li><a href="#contact">Contact Us</a></li>
-</ul>
-</nav>
 
-<div><img src="https://i.ibb.co/f45xtJ7/Kadji-Logo-BLK.png" alt="Kadji Est.1981"></div>
+   
+
+  <header id="home">
+   <img src="https://i.ibb.co/X3bTsX8/Kadji-Logo-BLK.png" alt="Kadji-Logo-BLK" >
+    </header>
+
+	<hr>
+  <div id="navbar"> 
+   <nav>
+	  <ul><li><a href="#home" aria-label="Go to the top of the page">Home</a></li>
+	<li><a href="#about" aria-labe="Go to what buisness is About section">About</a></li>
+<li><a href="#services" aria-label="Go to services and prices section">Services & Prices</a></li>
+		<li><a href ="gallery.html" aria-label="Go to gallery, in order to view pictures">Gallery</a></li>
+	<li><a href="#contact" aria-label="Go to Contact us section">Contact</a></li>
+	</ul></nav></div>
+	<br>
+	
+	
+			<section id="about">
+		<div>
+
+	  <iframe src="https://www.youtube.com/embed/IYKHm0uipVQ" height="300px" width="500px" display:block; ></iframe></div>
+		<div><h2>Family run business for 3 generations, hairdressing is our passion and it runs in our blood,<br> friendly atmosphere and fully proffesional, qualified staff to meet your expectations </h2>
+    <p>Hairdressing as an occupation dates back thousands of years. Ancient art drawings and paintings have been discovered depicting people working on another person's hair. Greek writers Aristophanes and Homer both mention hairdressing in their writings. In Africa, it was believed in some cultures that a person's spirit occupied his or her hair, giving hairdressers high status within these communities. The status of hairdressing encouraged many to develop their skills, and close relationships were built between hairdressers and their clients. Hours would be spent washing, combing, oiling, styling and ornamenting their hair. Men would work specifically on men, and women on other women. Before a master hairdresser died, they would give their combs and tools to a chosen successor during a special ceremony.[1]</p>
+
+<p> ancient Egypt, hairdressers had specially decorated cases to hold their tools, including lotions, scissors and styling materials. Barbers also worked as hairdressers, and wealthy men often had personal barbers within their home. With the standard of wig wearing within the culture, wigmakers were also trained as hairdressers. In ancient Rome and Greece household slaves and servants took on the role of hairdressers, including dyeing and shaving. Men who did not have their own private hair or shaving services would visit the local barbershop. Women had their hair maintained and groomed at their homes. Historical documentation is lacking regarding hairstylists from the 5th century until the 14th century. Hair care service grew in demand after a papal decree in 1092 demanded that all Roman Catholic clergymen remove their facial hair.[1]</p></div>
+		
+</section>
+	<section id="services"><div >
+		<h2>Services and Prices </h2>
+		<ul>Gents:<li>Haircut £12</li>
+		<li>Haircut with beard shaping 
+			</li></ul>
+	 
+	</div></section>
+	
+	<div id="contact">
+	</div>
+	
+	<section  id="How to find us">
+  <div>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6750.354059178905!2d-3.198359117933251!3d51.50209249532664!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfbfb1c758bde9ead!2sKadji&#39;s%20Hair%20Salon!5e0!3m2!1sen!2suk!4v1617064487746!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+		<p style="color:gold;">218 Whitchurch Rd, Cardiff CF14 3ND</p>
+	</div></section>
+    <script src="script.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
